test/expected/explain_main_fiapc_hi.out
explain short int main( int, char *argv[] )
        ^
9: error: main() must return int
